tests/compile_fail/borrow/multiple_struct_attrs.rs
#[derive(derive_more::Borrow)]
#[borrow(forward)]
#[borrow(forward)]
struct Foo(String);

fn main() {}
