tests/compile_fail/borrow/multiple_struct_attrs.stderr
error: only single `#[borrow(...)]` attribute is allowed here
 --> tests/compile_fail/borrow/multiple_struct_attrs.rs:3:1
  |
3 | #[borrow(forward)]
  | ^
